; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_filecache.c_nfsd_file_in_use.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_filecache.c_nfsd_file_in_use.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsd_file = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfsd_file*)* @nfsd_file_in_use to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfsd_file_in_use(%struct.nfsd_file* %0) #0 {
  %2 = alloca %struct.nfsd_file*, align 8
  store %struct.nfsd_file* %0, %struct.nfsd_file** %2, align 8
  %3 = load %struct.nfsd_file*, %struct.nfsd_file** %2, align 8
  %4 = call i64 @nfsd_file_check_writeback(%struct.nfsd_file* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load %struct.nfsd_file*, %struct.nfsd_file** %2, align 8
  %8 = call i64 @nfsd_file_check_write_error(%struct.nfsd_file* %7)
  %9 = icmp ne i64 %8, 0
  br label %10

10:                                               ; preds = %6, %1
  %11 = phi i1 [ true, %1 ], [ %9, %6 ]
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i64 @nfsd_file_check_writeback(%struct.nfsd_file*) #1

declare dso_local i64 @nfsd_file_check_write_error(%struct.nfsd_file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
